[gd_scene load_steps=7 format=3 uid="uid://co6std408uevq"]

[ext_resource type="Script" path="res://Scripts/paycheck_game.gd" id="1_qflf6"]
[ext_resource type="PackedScene" uid="uid://brp2an7hbk3vf" path="res://Scenes/gui.tscn" id="2_6nnlx"]
[ext_resource type="Texture2D" uid="uid://cabohf6lo0jvu" path="res://Assets/Paper.png" id="2_oqvgn"]
[ext_resource type="Texture2D" uid="uid://u1pykpgiaaom" path="res://Assets/Folder.png" id="3_js48y"]
[ext_resource type="Texture2D" uid="uid://b2v6a00j4rcou" path="res://Assets/Coffee.png" id="4_ynsft"]
[ext_resource type="Texture2D" uid="uid://c81bec41jkkt7" path="res://Assets/Pencil.png" id="5_ltud8"]

[node name="PaycheckGame" type="Node2D"]
script = ExtResource("1_qflf6")

[node name="BG Sprites" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="BG Sprites"]
z_index = -1
offset_left = -581.0
offset_top = -348.0
offset_right = 576.0
offset_bottom = 363.0
color = Color(0.337255, 0.423529, 0.52549, 1)

[node name="Sprite2D" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(-213, 61)
rotation = -0.397181
scale = Vector2(2, 2)
texture = ExtResource("2_oqvgn")

[node name="Sprite2D2" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(259, -112)
rotation = 0.393677
scale = Vector2(2, 2)
texture = ExtResource("2_oqvgn")

[node name="Sprite2D3" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(-45, -114)
rotation = -0.194916
scale = Vector2(2, 2)
texture = ExtResource("2_oqvgn")

[node name="Sprite2D4" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(96, 103)
rotation = 1.14715
scale = Vector2(2, 2)
texture = ExtResource("3_js48y")

[node name="Sprite2D5" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(-58, 140)
rotation = -0.0799022
scale = Vector2(2, 2)
texture = ExtResource("4_ynsft")

[node name="Sprite2D6" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(-223, -107)
rotation = 1.66619
scale = Vector2(2, 2)
texture = ExtResource("4_ynsft")

[node name="Sprite2D7" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(74, -28)
rotation = -0.495173
scale = Vector2(2, 2)
texture = ExtResource("5_ltud8")

[node name="Sprite2D8" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(259, 40)
rotation = 0.54312
scale = Vector2(2, 2)
texture = ExtResource("5_ltud8")

[node name="Sprite2D9" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(-81, 42)
rotation = 0.54312
scale = Vector2(2, 2)
texture = ExtResource("5_ltud8")

[node name="Sprite2D10" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(114, -162)
rotation = 0.468601
scale = Vector2(2, 2)
texture = ExtResource("3_js48y")

[node name="Sprite2D11" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(-310, 163)
rotation = 0.468601
scale = Vector2(2, 2)
texture = ExtResource("3_js48y")

[node name="Sprite2D26" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(-159, -231)
rotation = -0.424116
scale = Vector2(2, 2)
texture = ExtResource("3_js48y")

[node name="Sprite2D27" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(31, -231)
rotation = 1.54213
scale = Vector2(2, 2)
texture = ExtResource("3_js48y")

[node name="Sprite2D12" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(376, 137)
rotation = 0.468601
scale = Vector2(2, 2)
texture = ExtResource("3_js48y")

[node name="Sprite2D13" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(-299, -225)
rotation = -0.64098
scale = Vector2(2, 2)
texture = ExtResource("2_oqvgn")

[node name="Sprite2D14" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(-69, -252)
rotation = -0.64098
scale = Vector2(2, 2)
texture = ExtResource("5_ltud8")

[node name="Sprite2D15" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(207, 207)
rotation = 0.319791
scale = Vector2(2, 2)
texture = ExtResource("5_ltud8")

[node name="Sprite2D16" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(-406, -32)
rotation = -0.893727
scale = Vector2(2, 2)
texture = ExtResource("3_js48y")

[node name="Sprite2D17" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(356, -239)
rotation = -0.893727
scale = Vector2(2, 2)
texture = ExtResource("3_js48y")

[node name="Sprite2D18" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(440, -81)
rotation = 0.779236
scale = Vector2(2, 2)
texture = ExtResource("3_js48y")

[node name="Sprite2D19" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(-447, 116)
rotation = 0.779236
scale = Vector2(2, 2)
texture = ExtResource("4_ynsft")

[node name="Sprite2D20" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(165, -279)
rotation = 0.779236
scale = Vector2(2, 2)
texture = ExtResource("4_ynsft")

[node name="Sprite2D21" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(328, 240)
rotation = -0.813743
scale = Vector2(2, 2)
texture = ExtResource("4_ynsft")

[node name="Sprite2D22" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(-140, 217)
rotation = -0.64098
scale = Vector2(2, 2)
texture = ExtResource("2_oqvgn")

[node name="Sprite2D23" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(98, 220)
rotation = 0.275575
scale = Vector2(2, 2)
texture = ExtResource("2_oqvgn")

[node name="Sprite2D24" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(403, 30)
rotation = 2.80351
scale = Vector2(2, 2)
texture = ExtResource("2_oqvgn")

[node name="Sprite2D25" type="Sprite2D" parent="BG Sprites"]
z_index = -1
position = Vector2(-400, -146)
rotation = 2.80351
scale = Vector2(2, 2)
texture = ExtResource("2_oqvgn")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" parent="CanvasLayer" instance=ExtResource("2_6nnlx")]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="LeftSpawnLocations" type="Node" parent="."]

[node name="Marker2D" type="Marker2D" parent="LeftSpawnLocations"]
position = Vector2(-400, 0)

[node name="Marker2D2" type="Marker2D" parent="LeftSpawnLocations"]
position = Vector2(-400, -100)

[node name="Marker2D3" type="Marker2D" parent="LeftSpawnLocations"]
position = Vector2(-400, 100)

[node name="RightSpawnLocations" type="Node" parent="."]

[node name="Marker2D" type="Marker2D" parent="RightSpawnLocations"]
position = Vector2(400, 0)

[node name="Marker2D2" type="Marker2D" parent="RightSpawnLocations"]
position = Vector2(400, -100)

[node name="Marker2D3" type="Marker2D" parent="RightSpawnLocations"]
position = Vector2(400, 100)

[node name="TopSpawnLocations" type="Node" parent="."]

[node name="Marker2D" type="Marker2D" parent="TopSpawnLocations"]
position = Vector2(0, -250)

[node name="Marker2D2" type="Marker2D" parent="TopSpawnLocations"]
position = Vector2(200, -250)

[node name="Marker2D3" type="Marker2D" parent="TopSpawnLocations"]
position = Vector2(-200, -250)

[node name="BottomSpawnLocations" type="Node" parent="."]

[node name="Marker2D" type="Marker2D" parent="BottomSpawnLocations"]
position = Vector2(0, 250)

[node name="Marker2D2" type="Marker2D" parent="BottomSpawnLocations"]
position = Vector2(200, 250)

[node name="Marker2D3" type="Marker2D" parent="BottomSpawnLocations"]
position = Vector2(-200, 250)

[node name="PaycheckTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="DisableScreen" type="ColorRect" parent="."]
offset_left = -423.0
offset_top = -261.0
offset_right = 421.0
offset_bottom = 262.0
color = Color(1, 1, 1, 0)

[connection signal="timeout" from="PaycheckTimer" to="." method="_on_paycheck_timer_timeout"]
